Fix Overflow On Terms And Conditions Render

--- a/src/login/KcApp.css
+++ b/src/login/KcApp.css
@@ -79,10 +79,6 @@
     font-family: "Work Sans";
 }
 
-.my-root-class {
-    background: white;
-}
-
-.my-root-class body {
-    background: url(./assets/background.svg) no-repeat center center fixed;
+#storybook-root {
+    height: 100%;;
 }
